# PromptInjector

./: README.md
BE/: .gitignore  Cargo.toml
BE/output/: prompt-1745175516.json  prompt-1745175562.json  prompt-1745175703.json  prompt-1745175739.json  prompt-1745175947.json  prompt-1745176016.json  prompt-1745176041.json  prompt-1745176058.json  prompt-1745176087.json
BE/src/: detection.rs  llm.rs  main.rs  models.rs  routes.rs  rules.rs
FE/: README.md  index.html  tailwind.config.ts
FE/src/: index.css
FE/src/components/: AnalysisResult.tsx  ProgressBar.tsx  RiskBadge.tsx  ScoreCard.tsx
FE/src/components/ui/: button.tsx
FE/src/pages/: Index.tsx
