[package]
name = "prompt-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
